@@ -21,6 +21,7 @@ Major changes from 1.3.x:
 * New user preference for limitting the image size for images on image description
   pages 
 * Error pages no more offer edit / talk / watch links (bug #502)
+* Allow user to preview article on first edit (bug #530)
 * ... and more!
 
 === Caveats ===
